a lot of work on razor net